# RL-Nemontron-Edge-Omni

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  pyrefly.toml  ray.sub
.github/: CODEOWNERS
docker/: Dockerfile  Dockerfile.ngc_pytorch
docs/: Makefile  conf.py  index.md  nsys-profiling.md
docs/about/: backends.md  clusters.md  evaluation.md  features.md  installation.md  overview.md  quick-start.md  tips-and-tricks.md
docs/about/algorithms/: dapo.md  dpo.md  grpo.md  index.md  on-policy-distillation.md  rm.md  sft.md
docs/design-docs/: fsdp2-parallel-plan.md
docs/guides/: async-grpo.md  environments.md  eval.md  grpo.md
examples/: run_distillation_math.py  run_grpo.py  run_grpo_helpsteer3.py  run_grpo_math.py  run_sft.py  run_vlm_grpo.py
examples/configs/: distillation_math.yaml  dpo.yaml  grpo_helpsteer3.yaml  grpo_math_1B.yaml  grpo_math_1B_megatron.yaml  grpo_rm_1B.yaml  grpo_sliding_puzzle.yaml  rm.yaml  sft.yaml  sft_automodel.yaml  sft_lora.yaml  sft_nemotron_super_49b.yaml  sft_nemotron_super_49b_base.yaml  sft_nemotron_super_49b_tulu_v3.yaml  sft_openmathinstruct2.yaml  vlm_grpo_3B.yaml  vlm_grpo_3B_megatron.yaml
examples/configs/recipes/llm/: dapo-qwen2.5-7b.yaml  grpo-dapomath17k-dsv3-megatron.yaml  grpo-helpsteer3-llama-3.2-1b-1n8g-fsdp2tp1.yaml  grpo-helpsteer3-llama-3.3-nemotron-super-49b-v1.5-4n8g-fsdp2tp8.yaml  sft-gpt-oss-20b-1n8g-fsdp8ep8-automodel.yaml  sft-llama3.1-8b-1n8g-dtensor-lora.yaml  sft-llama3.2-1b-1n8g-fsdp2tp1.v3.yaml  sft-nemotron-super-49b-tulu-v3.yaml  sft-nemotron-super-49b.yaml  sft-tmblog-llama3.1-8b.yaml
examples/configs/recipes/llm/performance/: grpo-llama3.1-8b-instruct-2n8g-async-1off.yaml
examples/custom_parallel/: llama_nemotron_super_49b_custom_plan.py
examples/penguin/: grpo_dapo17k_bytedtsinghua_qwen3_4binstruct_nf.yaml  run_grpo_penguin.py  run_penguin_single_node_sanity_tests.sh
nemo_rl/: __init__.py
nemo_rl/algorithms/: async_utils.py  grpo.py  loss_functions.py  sft.py  utils.py
nemo_rl/data/: llm_message_utils.py  processors.py
nemo_rl/data/datasets/: raw_dataset.py
nemo_rl/data/datasets/preference_datasets/: __init__.py  helpsteer3.py
nemo_rl/data/datasets/response_datasets/: __init__.py  clevr.py  dapo_math.py  deepscaler.py  geometry3k.py  helpsteer3.py  oai_format_dataset.py  oasst.py  openmathinstruct2.py  refcoco.py  response_dataset.py  squad.py  tulu3.py
nemo_rl/distributed/: ray_actor_environment_registry.py  virtual_cluster.py  worker_groups.py
nemo_rl/environments/: code_jaccard_environment.py  helpsteer3_environment.py  math_environment.py  penguin.py  utils.py
nemo_rl/experience/: rollouts.py
nemo_rl/models/dtensor/: parallelize.py
nemo_rl/models/generation/: fp8.py  interfaces.py
nemo_rl/models/generation/vllm/: vllm_backend.py  vllm_generation.py  vllm_worker.py  vllm_worker_async.py
nemo_rl/models/megatron/: common.py  community_import.py
nemo_rl/models/policy/: __init__.py  dtensor_policy_worker.py  dtensor_policy_worker_v2.py  lm_policy.py  megatron_policy_worker.py  utils.py
nemo_rl/utils/: automodel_checkpoint.py  checkpoint.py  flops_tracker.py  logger.py  path.py  venvs.py
research/: README.md
research/template_project/: README.md  pyproject.toml  single_update.py
research/template_project/configs/: grpo_math_1B.yaml
research/template_project/configs/recipes/llm/: single_update_1n8g.yaml
research/template_project/template_project/: data_utils.py
research/template_project/tests/functional/: single_update.sh
research/template_project/tests/test_suites/llm/: common.env  single_update_1n8g.sh
research/template_project/tests/unit/: test_data_utils.py
tests/functional/: L1_Functional_Tests_GPU.sh  grpo_math_env.sh  test_automodel_lora_sft.sh
tests/functional/distillation/: metrics.json
tests/test_suites/: nightly.txt  performance.txt  release.txt
tests/test_suites/llm/: grpo-dapomath17k-dsv3-megatron.sh  grpo-helpsteer3-llama-3.2-1b-1n8g-fsdp2tp1.sh  grpo-helpsteer3-llama-3.3-nemotron-super-49b-v1.5-4n8g-fsdp2tp8.sh  grpo-nano-v2-12b-1n8g-megatron.sh  grpo-nano-v2-12b-2n8g-fsdp2tp1.sh  sft-llama3.1-8b-1n8g-dtensor-lora.sh  sft-nemotron-super-49b-tulu-v3.sh  sft-nemotron-super-49b.sh
tests/test_suites/llm/performance/: common.env  grpo-deepseek-v3-32n8g.sh  grpo-deepseek-v3-64n8g-async-1off.sh  grpo-llama3.1-8b-instruct-2n8g.sh  grpo-qwen3-235b-16n8g.sh  grpo-qwen3-235b-32n8g-async-1off.sh  grpo-qwen3-32b-4n8g.sh  grpo-qwen3-32b-8n8g-async-1off.sh
tests/unit/: L0_Unit_Tests_Other.sh  conftest.py  test_config_validation.py  test_recipes_and_test_suites.py  test_transformers_module_patching.py
tests/unit/algorithms/: test_grpo.py  test_loss_functions.py  test_sequence_packing_gradients.py  test_utils.py
tests/unit/data/: test_data_processor.py  test_data_shuffle_reproducity.py
tests/unit/environments/: test_code_jaccard_environment.py  test_penguin.py  test_reward_model_environment.py
tests/unit/environments/penguin_test_data/: test_penguin_sanity.json
tests/unit/experience/: test_rollouts.py
tests/unit/models/generation/: test_vllm_generation.py
tests/unit/models/policy/: test_dtensor_worker.py  test_dtensor_worker_v2.py  test_megatron_worker.py  test_policy_validation.py
tests/unit/utils/: test_automodel_checkpoint.py  test_logger.py  test_native_checkpoint.py
tools/: code_snapshot.sh  copyright.sh  refit_verifier.py
