[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "template-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["nemo-rl"]

[dependency-groups]
test = ["pytest>=7.0.0", "pytest-timeout", "pytest-cov"]

[tool.uv.sources]
nemo-rl = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["template_project"]

[tool.pytest.ini_options]
addopts = "--durations=15 -s -rA -x"
testpaths = ["tests"]
python_files = "test_*.py"
